--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tabler/icons-react": "^3.34.0",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "lucide-react": "^0.525.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
+    "@headlessui/react": "^2.2.4",
     "@tauri-apps/cli": "^2",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
